--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.12",
+    "quasar": "^2.16.8",
     "vue": "^3.4.35",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.7.0",
     "@vitejs/plugin-vue": "^5.1.2",
+    "sass": "^1.33.0",
     "vite": "^5.4.0"
   }
 }
