--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.12",
+    "axios": "^1.7.3",
     "quasar": "^2.16.8",
     "vue": "^3.4.35",
     "vue-router": "^4.4.3"
